src/litmusbayes/litmus/parser/LitmusParser.py
# Generated from Litmus.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LitmusParser ( Parser ):

    grammarFileName = "Litmus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "';'", "'}'", "'='", "'locations'", 
                     "'['", "']'", "'filter'", "'('", "')'", "'true'", "'false'", 
                     "'&'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ADDR_OF", "NOT", "PID", "REG", "IMM", 
                      "OP", "QUANTIFIER", "VAR_TYPE", "VAR", "POINTER", 
                      "LINE_COMMENT", "COMMENT", "WS" ]

    RULE_entry = 0
    RULE_init = 1
    RULE_var_decl = 2
    RULE_reg_decl = 3
    RULE_final = 4
    RULE_location = 5
    RULE_filter = 6
    RULE_observed_var = 7
    RULE_cond_expr = 8
    RULE_cond_term = 9
    RULE_cond = 10
    RULE_reg_cond = 11
    RULE_var_cond = 12
    RULE_addr_cond = 13

    ruleNames =  [ "entry", "init", "var_decl", "reg_decl", "final", "location", 
                   "filter", "observed_var", "cond_expr", "cond_term", "cond", 
                   "reg_cond", "var_cond", "addr_cond" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    ADDR_OF=13
    NOT=14
    PID=15
    REG=16
    IMM=17
    OP=18
    QUANTIFIER=19
    VAR_TYPE=20
    VAR=21
    POINTER=22
    LINE_COMMENT=23
    COMMENT=24
    WS=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self):
            return self.getTypedRuleContext(LitmusParser.InitContext,0)


        def final(self):
            return self.getTypedRuleContext(LitmusParser.FinalContext,0)


        def EOF(self):
            return self.getToken(LitmusParser.EOF, 0)

        def location(self):
            return self.getTypedRuleContext(LitmusParser.LocationContext,0)


        def filter_(self):
            return self.getTypedRuleContext(LitmusParser.FilterContext,0)


        def getRuleIndex(self):
            return LitmusParser.RULE_entry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntry" ):
                listener.enterEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntry" ):
                listener.exitEntry(self)




    def entry(self):

        localctx = LitmusParser.EntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_entry)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.init()
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 29
                self.location()


            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 32
                self.filter_()


            self.state = 35
            self.final()
            self.state = 36
            self.match(LitmusParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Var_declContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Var_declContext,i)


        def reg_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Reg_declContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Reg_declContext,i)


        def reg_cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Reg_condContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Reg_condContext,i)


        def var_cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Var_condContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Var_condContext,i)


        def addr_cond(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Addr_condContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Addr_condContext,i)


        def getRuleIndex(self):
            return LitmusParser.RULE_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit" ):
                listener.enterInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit" ):
                listener.exitInit(self)




    def init(self):

        localctx = LitmusParser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_init)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(LitmusParser.T__0)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3178496) != 0):
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 39
                    self.var_decl()
                    self.state = 40
                    self.match(LitmusParser.T__1)
                    pass

                elif la_ == 2:
                    self.state = 42
                    self.reg_decl()
                    self.state = 43
                    self.match(LitmusParser.T__1)
                    pass

                elif la_ == 3:
                    self.state = 45
                    self.reg_cond()
                    self.state = 46
                    self.match(LitmusParser.T__1)
                    pass

                elif la_ == 4:
                    self.state = 48
                    self.var_cond()
                    self.state = 49
                    self.match(LitmusParser.T__1)
                    pass

                elif la_ == 5:
                    self.state = 51
                    self.addr_cond()
                    self.state = 52
                    self.match(LitmusParser.T__1)
                    pass


                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(LitmusParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_TYPE(self):
            return self.getToken(LitmusParser.VAR_TYPE, 0)

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(LitmusParser.VAR)
            else:
                return self.getToken(LitmusParser.VAR, i)

        def POINTER(self):
            return self.getToken(LitmusParser.POINTER, 0)

        def ADDR_OF(self):
            return self.getToken(LitmusParser.ADDR_OF, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = LitmusParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(LitmusParser.VAR_TYPE)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==21 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 63
                self.match(LitmusParser.T__3)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 64
                    self.match(LitmusParser.ADDR_OF)


                self.state = 67
                self.match(LitmusParser.VAR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reg_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_TYPE(self):
            return self.getToken(LitmusParser.VAR_TYPE, 0)

        def PID(self):
            return self.getToken(LitmusParser.PID, 0)

        def REG(self):
            return self.getToken(LitmusParser.REG, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_reg_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReg_decl" ):
                listener.enterReg_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReg_decl" ):
                listener.exitReg_decl(self)




    def reg_decl(self):

        localctx = LitmusParser.Reg_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_reg_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LitmusParser.VAR_TYPE)
            self.state = 71
            self.match(LitmusParser.PID)
            self.state = 72
            self.match(LitmusParser.REG)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FinalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUANTIFIER(self):
            return self.getToken(LitmusParser.QUANTIFIER, 0)

        def cond_expr(self):
            return self.getTypedRuleContext(LitmusParser.Cond_exprContext,0)


        def NOT(self):
            return self.getToken(LitmusParser.NOT, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_final

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFinal" ):
                listener.enterFinal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFinal" ):
                listener.exitFinal(self)




    def final(self):

        localctx = LitmusParser.FinalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_final)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 74
                self.match(LitmusParser.NOT)


            self.state = 77
            self.match(LitmusParser.QUANTIFIER)
            self.state = 78
            self.cond_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def observed_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Observed_varContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Observed_varContext,i)


        def getRuleIndex(self):
            return LitmusParser.RULE_location

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocation" ):
                listener.enterLocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocation" ):
                listener.exitLocation(self)




    def location(self):

        localctx = LitmusParser.LocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_location)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(LitmusParser.T__4)
            self.state = 81
            self.match(LitmusParser.T__5)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==21:
                self.state = 82
                self.observed_var()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(LitmusParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond_expr(self):
            return self.getTypedRuleContext(LitmusParser.Cond_exprContext,0)


        def getRuleIndex(self):
            return LitmusParser.RULE_filter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilter" ):
                listener.enterFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilter" ):
                listener.exitFilter(self)




    def filter_(self):

        localctx = LitmusParser.FilterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_filter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(LitmusParser.T__7)
            self.state = 91
            self.cond_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Observed_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PID(self):
            return self.getToken(LitmusParser.PID, 0)

        def REG(self):
            return self.getToken(LitmusParser.REG, 0)

        def VAR(self):
            return self.getToken(LitmusParser.VAR, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_observed_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObserved_var" ):
                listener.enterObserved_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObserved_var" ):
                listener.exitObserved_var(self)




    def observed_var(self):

        localctx = LitmusParser.Observed_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_observed_var)
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(LitmusParser.PID)
                self.state = 94
                self.match(LitmusParser.REG)
                self.state = 95
                self.match(LitmusParser.T__1)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(LitmusParser.VAR)
                self.state = 97
                self.match(LitmusParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond_term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LitmusParser.Cond_termContext)
            else:
                return self.getTypedRuleContext(LitmusParser.Cond_termContext,i)


        def OP(self, i:int=None):
            if i is None:
                return self.getTokens(LitmusParser.OP)
            else:
                return self.getToken(LitmusParser.OP, i)

        def getRuleIndex(self):
            return LitmusParser.RULE_cond_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_expr" ):
                listener.enterCond_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_expr" ):
                listener.exitCond_expr(self)




    def cond_expr(self):

        localctx = LitmusParser.Cond_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cond_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.cond_term()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 101
                self.match(LitmusParser.OP)
                self.state = 102
                self.cond_term()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_termContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def cond(self):
            return self.getTypedRuleContext(LitmusParser.CondContext,0)


        def cond_expr(self):
            return self.getTypedRuleContext(LitmusParser.Cond_exprContext,0)


        def NOT(self):
            return self.getToken(LitmusParser.NOT, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_cond_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_term" ):
                listener.enterCond_term(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_term" ):
                listener.exitCond_term(self)




    def cond_term(self):

        localctx = LitmusParser.Cond_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_cond_term)
        self._la = 0 # Token type
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 15, 21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.cond()
                pass
            elif token in [9, 14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==14:
                    self.state = 109
                    self.match(LitmusParser.NOT)


                self.state = 112
                self.match(LitmusParser.T__8)
                self.state = 113
                self.cond_expr()
                self.state = 114
                self.match(LitmusParser.T__9)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addr_cond(self):
            return self.getTypedRuleContext(LitmusParser.Addr_condContext,0)


        def var_cond(self):
            return self.getTypedRuleContext(LitmusParser.Var_condContext,0)


        def reg_cond(self):
            return self.getTypedRuleContext(LitmusParser.Reg_condContext,0)


        def getRuleIndex(self):
            return LitmusParser.RULE_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)




    def cond(self):

        localctx = LitmusParser.CondContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cond)
        try:
            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.addr_cond()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.var_cond()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.reg_cond()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(LitmusParser.T__10)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.match(LitmusParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Reg_condContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PID(self):
            return self.getToken(LitmusParser.PID, 0)

        def REG(self):
            return self.getToken(LitmusParser.REG, 0)

        def IMM(self):
            return self.getToken(LitmusParser.IMM, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_reg_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReg_cond" ):
                listener.enterReg_cond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReg_cond" ):
                listener.exitReg_cond(self)




    def reg_cond(self):

        localctx = LitmusParser.Reg_condContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_reg_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(LitmusParser.PID)
            self.state = 126
            self.match(LitmusParser.REG)
            self.state = 127
            self.match(LitmusParser.T__3)
            self.state = 128
            self.match(LitmusParser.IMM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_condContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(LitmusParser.VAR, 0)

        def IMM(self):
            return self.getToken(LitmusParser.IMM, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_var_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_cond" ):
                listener.enterVar_cond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_cond" ):
                listener.exitVar_cond(self)




    def var_cond(self):

        localctx = LitmusParser.Var_condContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(LitmusParser.VAR)
            self.state = 131
            self.match(LitmusParser.T__3)
            self.state = 132
            self.match(LitmusParser.IMM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Addr_condContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PID(self):
            return self.getToken(LitmusParser.PID, 0)

        def REG(self):
            return self.getToken(LitmusParser.REG, 0)

        def VAR(self):
            return self.getToken(LitmusParser.VAR, 0)

        def getRuleIndex(self):
            return LitmusParser.RULE_addr_cond

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddr_cond" ):
                listener.enterAddr_cond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddr_cond" ):
                listener.exitAddr_cond(self)




    def addr_cond(self):

        localctx = LitmusParser.Addr_condContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_addr_cond)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(LitmusParser.PID)
            self.state = 135
            self.match(LitmusParser.REG)
            self.state = 136
            self.match(LitmusParser.T__3)
            self.state = 137
            self.match(LitmusParser.VAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





